--- a/templates/main.tex
+++ b/templates/main.tex
@@ -36,6 +36,8 @@
 %% for tables
 \usepackage[normalem]{ulem}
 \useunder{\uline}{\ul}{}
+\usepackage[table,xcdraw]{xcolor}
+% If you use beamer only pass "xcolor=table" option, i.e. \documentclass[xcolor=table]{beamer}
 
 %% These have been added at the request of the MIT Libraries, because
 %% some PDF conversions mess up the ligatures.  -LB, 1/22/2014
@@ -138,6 +140,7 @@
 \include{insertloa}
 \include{chap1}
 \include{chap2}
+\include{chap3}
 \appendix
 \include{appa}
 \include{appb}
