--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,22 @@
 
+@article{wilson_imaging_2005,
+	title = {Imaging the seismic structure of the crust and upper mantle beneath the {Great} {Plains}, {Rio} {Grande} {Rift}, and {Colorado} {Plateau} using receiver functions},
+	volume = {110},
+	copyright = {Copyright 2005 by the American Geophysical Union.},
+	issn = {2156-2202},
+	url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2004JB003492},
+	doi = {10.1029/2004JB003492},
+	abstract = {The seismic structure of the crust and upper mantle of the southwestern United States is examined using receiver functions calculated from teleseismic arrivals recorded in the Colorado Plateau–Rio Grande Rift–Great Plains Seismic Transect (LA RISTRA) experiment. We apply receiver function estimation and filtering methods developed by Wilson and Aster (2005) to produce receiver functions with decreased sensitivity to noise and deconvolutional instability. Crustal thickness and Vp/Vs ratios are estimated using both direct and reverberated P-to-S receiver function modes. We apply regularized receiver function migration methods to produce a multiple-suppressed image of the velocity discontinuity structure of the subsurface. Our results show that crustal thickness averages 44.1 ± 2.3 km beneath the Great Plains (GP) and 45.6 ± 1.1 km beneath the Colorado Plateau (CP). Crustal thinning beneath the Rio Grande Rift (RGR) is broadly symmetric about the rift axis, with the thinnest crust (35 km) located directly beneath the rift axis, suggesting a pure shear stretched lithosphere beneath the RGR. We also observe a prominent northwest dipping discontinuity, ranging from 65 to 85 km deep beneath the CP, and possible subcrustal discontinuities beneath the GP. These discontinuities, along with recent xenolith data, are consistent with preserved ancient lithospheric structures such as relict suture zones associated with Proterozoic subduction. We observe an upper mantle discontinuity at 220–300 km depth that may correlate with similar discontinuities observed beneath eastern North America. We also observe relatively flat discontinuities at 410 and 660 km depth, indicating there is not a large-scale thermal anomaly beneath the RGR at these depths.},
+	language = {en},
+	number = {B5},
+	urldate = {2021-06-12},
+	journal = {Journal of Geophysical Research: Solid Earth},
+	author = {Wilson, David and Aster, Richard and Ni, James and Grand, Stephen and West, Michael and Gao, Wei and Baldridge, W. Scott and Semken, Steve},
+	year = {2005},
+	note = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2004JB003492},
+	keywords = {lithosphere, receiver function, upper mantle},
+}
+
 @article{reiter_heat-flow_2009,
 	title = {Heat-flow anomalies crossing {New} {Mexico} along {La} {Ristra} seismic profile},
 	volume = {1},
