adding layer descriptions

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -1,5 +1,6 @@
 \newacronym{aeo}{AEO}{Annual Energy Outlook}
 \newacronym{ann}{ANN}{Artificial Neural Network}
+\newacronym{aoi}{AOI}{Area of Interest}
 \newacronym{br}{BR}{Basin and Range}
 \newacronym{bnn}{BNN}{Bayesian Neural Network}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
@@ -11,10 +12,12 @@
 \newacronym{ep}{E\&P}{Exploration and Production}
 \newacronym{gdh}{GDH}{Geothermal District Heating}
 \newacronym{ghg}{GHG}{Greenhouse Gas}
+\newacronym{gis}{GIS}{Geographic Information System}
 \newacronym{gto}{GTO}{Geothermal Technologies Office}
 \newacronym{iea}{IEA}{International Energy Agency}
 \newacronym{ieo}{IEO}{International Energy Outlook}
 \newacronym{irena}{IRENA}{International Renewable Energy Agency}
+\newacronym{kde}{KDE}{Kernel Density Estimation}
 \newacronym{kgra}{KGRA}{Known Geothermal Resource Area}
 \newacronym{kwh}{kWh}{Kilowatt-Hour}
 \newacronym{lcoe}{LCOE}{Levelized Cost of Electricity}
