--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,145 @@
 
+@article{keller_comparative_1991,
+	title = {A comparative study of the {Rio} {Grande} and {Kenya} rifts},
+	volume = {197},
+	issn = {0040-1951},
+	url = {https://www.sciencedirect.com/science/article/pii/0040195191900503},
+	doi = {10.1016/0040-1951(91)90050-3},
+	abstract = {Since they are two of the prominent continental rifts which are active today, the Kenya and Rio Grande rifts have been the subject of many recent studies. There are many gaps in our knowledge, but the data available make a comparative analysis worthwhile. Although they are part of much larger extensional regimes, these rifts are of similar dimensions and extent. In addition to these obvious similarities, geophysical data suggest the crustal and upper mantle structures of these features are also similar. They both are associated with relatively localized crustal thinning and much broader zones of lithospheric thinning. Seismic and gravity data indicate that the basement structure beneath both rift valleys is very complex, and recent studies have stressed the role of low-angle normal faulting in their structural development. However, geologic data and earthquake focal mechanisms indicate that high-angle normal faults and strike-slip faulting are also important. However, as one looks at the tectonic evolution and volcanic histories of the rifts, many differences are apparent. Volcanism has been virtually continuous in the Kenya rift area for over 20 Ma and the total volume of extrusives is over 200,000 km3. Unlike the Kenya rift, the Rio Grande rift formed in a region which was already both tectonically and magmatically active. Thus, there is uncertainty about what constitutes rift volcanism in the Rio Grande rift. However, the volume of extrusives generally accepted to be associated with this rift is about 5–10\% that of the Kenya rift. The compositions of the volcanics are also very different in these rifts, and the Kenya rift displays migration of volcanic activity, and compositional variations in time which have not been recognized in the Rio Grande rift. The volcanic activity in the Rio Grande rift post-dated most of the faulting, whereas faulting and volcanism display complex interactions in Kenya. The nature and timing of uplift are important but difficult questions in both rifts.},
+	language = {en},
+	number = {2},
+	urldate = {2021-02-11},
+	journal = {Tectonophysics},
+	author = {Keller, Randy and Khan, A. and Morganc, P. and Wendlandt, R. and Baldridge, S. and Olsen, K. and Prodehl, C. and Braile, L. W.},
+	month = oct,
+	year = {1991},
+	pages = {355--371},
+}
+
+@misc{utep_gravity_2011,
+	title = {Gravity {Dataset} for the {United} {States} {Lower} 48 states},
+	url = {http://cybershare.utep.edu/dataset/gravity-dataset-united-states-lower-48-states},
+	urldate = {2021-06-14},
+	journal = {Gravity Dataset for the United States Lower 48 states},
+	author = {{UTEP}},
+	year = {2011},
+}
+
+@misc{gem_strain_2014,
+	title = {Strain {Rate} {Model} {\textbar} {GEM} - {Global} {Earthquake} {Model}},
+	url = {https://storage.globalquakemodel.org/what/seismic-hazard/strain-rate-model/},
+	urldate = {2021-06-14},
+	journal = {Understanding the potential for earthquakes through strain},
+	author = {{GEM}},
+	year = {2014},
+}
+
+@misc{kreemer_corne_global_2020,
+	title = {Global {Strain} {Rate} {Model} v.2.1},
+	shorttitle = {{GSRM}},
+	url = {http://geodesy.unr.edu/GSRM/},
+	urldate = {2021-06-14},
+	author = {{Kreemer, Corne}},
+	month = apr,
+	year = {2020},
+}
+
+@techreport{duval_terrestrial_2005,
+	type = {Open-{File} {Report}},
+	title = {Terrestrial {Radioactivity} and {Gamma}-ray {Exposure} in the {United} {States} and {Canada}},
+	shorttitle = {Open-{File} {Report} 2005-1413},
+	url = {https://pubs.usgs.gov/of/2005/1413/index.htm},
+	number = {2005-1413},
+	urldate = {2021-06-14},
+	institution = {USGS},
+	author = {Duval, Joseph and Carson, John and Holman, Peter and Darnley, Arthur},
+	year = {2005},
+}
+
+@misc{usgs_earthquake_2021,
+	title = {Earthquake {Hazards} {Program}},
+	url = {https://earthquake.usgs.gov/earthquakes/search/},
+	urldate = {2021-06-14},
+	journal = {Search Earthquake Catalog},
+	author = {{USGS}},
+	year = {2021},
+}
+
+@article{sanford_earthquake_2002,
+	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 1869-1998},
+	shorttitle = {Earthquake catalogs for {New} {Mexico} and bordering areas},
+	author = {Sanford, Allan and Lin, Kuo-Wan and Tsai, I-ching and Jaksha, Lawrence},
+	year = {2002},
+}
+
+@article{sanford_earthquake_2002-1,
+	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 1869–1998},
+	volume = {210},
+	journal = {New Mexico Bureau of Geology and Mineral Resources Circular},
+	author = {Sanford, Allan R and Lin, Kuo-wan and Tsai, I-ching and Jaksha, Lawrence H},
+	year = {2002},
+	pages = {1--9},
+}
+
+@misc{kelley_geothermal_2015,
+	title = {Geothermal {Data} {Repository} ({GDR})},
+	url = {https://gdr.openei.org/},
+	abstract = {The Geothermal Data Repository (GDR) is the submission point for all research, development, demonstration and deployment data collected from DOE Geothermal Technologies Office funds recipients.},
+	language = {en},
+	urldate = {2021-06-14},
+	journal = {GDR},
+	author = {Kelley, Rick},
+	year = {2015},
+}
+
+@misc{esri_how_2021,
+	title = {How {Kernel} {Density} works—{ArcGIS} {Pro} {\textbar} {Documentation}},
+	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/spatial-analyst/how-kernel-density-works.htm},
+	urldate = {2021-06-14},
+	author = {{ESRI}},
+	year = {2021},
+}
+
+@book{silverman_density_2018,
+	title = {Density estimation for statistics and data analysis},
+	isbn = {1-315-14091-8},
+	publisher = {Routledge},
+	author = {Silverman, Bernard W},
+	year = {2018},
+}
+
+@article{daly_physiographically_2008,
+	title = {Physiographically sensitive mapping of climatological temperature and precipitation across the conterminous {United} {States}},
+	volume = {28},
+	issn = {0899-8418},
+	number = {15},
+	journal = {International Journal of Climatology: a Journal of the Royal Meteorological Society},
+	author = {Daly, Christopher and Halbleib, Michael and Smith, Joseph I and Gibson, Wayne P and Doggett, Matthew K and Taylor, George H and Curtis, Jan and Pasteris, Phillip P},
+	year = {2008},
+	note = {Publisher: Wiley Online Library},
+	pages = {2031--2064},
+}
+
+@misc{prism_prism_2021,
+	title = {{PRISM} {Climate} {Group}, {Oregon} {State} {U}},
+	url = {https://prism.oregonstate.edu/normals/},
+	urldate = {2021-06-13},
+	author = {{PRISM}},
+	year = {2021},
+}
+
+@article{mack_late_1994,
+	title = {Late {Oligocene} and {Miocene} faulting and sedimentation, and evolution of the southern {Rio} {Grande} rift, {New} {Mexico}, {USA}},
+	volume = {92},
+	issn = {0037-0738},
+	number = {1-2},
+	journal = {Sedimentary Geology},
+	author = {Mack, Greg H and Seager, William R and Kieling, John},
+	year = {1994},
+	note = {Publisher: Elsevier},
+	pages = {79--96},
+}
+
 @article{wilson_imaging_2005,
 	title = {Imaging the seismic structure of the crust and upper mantle beneath the {Great} {Plains}, {Rio} {Grande} {Rift}, and {Colorado} {Plateau} using receiver functions},
 	volume = {110},
@@ -2861,23 +3002,6 @@ Publisher: Academic Journals},
 	pages = {3849--3889},
 }
 
-@article{randy_keller_comparative_1991,
-	title = {A comparative study of the {Rio} {Grande} and {Kenya} rifts},
-	volume = {197},
-	issn = {0040-1951},
-	url = {https://www.sciencedirect.com/science/article/pii/0040195191900503},
-	doi = {10.1016/0040-1951(91)90050-3},
-	abstract = {Since they are two of the prominent continental rifts which are active today, the Kenya and Rio Grande rifts have been the subject of many recent studies. There are many gaps in our knowledge, but the data available make a comparative analysis worthwhile. Although they are part of much larger extensional regimes, these rifts are of similar dimensions and extent. In addition to these obvious similarities, geophysical data suggest the crustal and upper mantle structures of these features are also similar. They both are associated with relatively localized crustal thinning and much broader zones of lithospheric thinning. Seismic and gravity data indicate that the basement structure beneath both rift valleys is very complex, and recent studies have stressed the role of low-angle normal faulting in their structural development. However, geologic data and earthquake focal mechanisms indicate that high-angle normal faults and strike-slip faulting are also important. However, as one looks at the tectonic evolution and volcanic histories of the rifts, many differences are apparent. Volcanism has been virtually continuous in the Kenya rift area for over 20 Ma and the total volume of extrusives is over 200,000 km3. Unlike the Kenya rift, the Rio Grande rift formed in a region which was already both tectonically and magmatically active. Thus, there is uncertainty about what constitutes rift volcanism in the Rio Grande rift. However, the volume of extrusives generally accepted to be associated with this rift is about 5–10\% that of the Kenya rift. The compositions of the volcanics are also very different in these rifts, and the Kenya rift displays migration of volcanic activity, and compositional variations in time which have not been recognized in the Rio Grande rift. The volcanic activity in the Rio Grande rift post-dated most of the faulting, whereas faulting and volcanism display complex interactions in Kenya. The nature and timing of uplift are important but difficult questions in both rifts.},
-	language = {en},
-	number = {2},
-	urldate = {2021-02-11},
-	journal = {Tectonophysics},
-	author = {Randy Keller, G. and Aftab Khan, M. and Morganc, Paul and Wendlandt, Richard F. and Scott Baldridge, W. and Olsen, Kenneth H. and Prodehl, Claus and Braile, L. W.},
-	month = oct,
-	year = {1991},
-	pages = {355--371},
-}
-
 @techreport{wannamaker_integrating_2017,
 	title = {Integrating {Magnetotellurics}, {Soil} {Gas} {Geochemistry} and {Structural} {Analysis} to {Identify} {Hidden}, {High} {Enthalpy}, {Extensional} {Geothermal} {Systems}},
 	url = {http://www.osti.gov/servlets/purl/1457571/},
@@ -2927,14 +3051,6 @@ Quantec Geoscience Inc.}},
 	author = {Sanford, Allan R},
 	year = {2006},
 	pages = {11},
-}
-
-@article{sanford_earthquake_2021,
-	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 1869-1998},
-	shorttitle = {Earthquake catalogs for {New} {Mexico} and bordering areas},
-	author = {Sanford, Allan and Lin, Kuo-Wan and Tsai, I-ching and Jaksha, Lawrence},
-	month = jan,
-	year = {2021},
 }
 
 @book{pareto_cours_1964,
